--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.7.0",
     "@expo-google-fonts/poppins": "^0.2.2",
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
@@ -20,6 +21,7 @@
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.15.6",
+    "formik": "^2.2.9",
     "graphql": "^15.8.0",
     "graphql-tag": "^2.12.6",
     "react": "18.1.0",
@@ -28,6 +30,7 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^4.12.5",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.12.0",
     "react-native-reanimated-carousel": "^3.1.0",
     "react-native-responsive-screen": "^1.4.2",
@@ -38,7 +41,8 @@
     "react-native-webview": "11.23.1",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
