--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.3.1",
+    "react-native-dots-pagination": "^0.2.0",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^4.12.5",
